insert with ajax

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,6 +51,21 @@ db.default.password="postgres"
 # You can disable evolutions if needed
 # evolutionplugin=disabled
 
+slick.default="models.*"
+
+play {
+  akka {
+    actor {
+      slick-context = {
+        fork-join-executor {
+          parallelism-min = 300
+          parallelism-max = 300
+        }
+      }
+    }
+  }
+}
+
 # Logger
 # ~~~~~
 # You can also configure logback (http://logback.qos.ch/),
