--- a/conf/application.conf
+++ b/conf/application.conf
@@ -80,3 +80,10 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# SMTP
+smtp.mock=true
+smtp.host=smtp.gmail.com
+smtp.port=465
+smtp.ssl=yes
+smtp.user="essc.company@gmail.com"
+smtp.password=mycompany91
